--- a/pages/mad-libs.html
+++ b/pages/mad-libs.html
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link href="/index.css" rel="stylesheet" />
+    <link href="/Nirooba_blog/Blog.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -83,7 +83,7 @@
         <div class="col-10 cover-bg">
           <img
             class="mx-auto d-block img-fluid cover-bg"
-            src="/Images/m.png"
+            src="/Nirooba_blog/Images/m.png"
             alt="md-cover"
           />
         </div>
@@ -119,7 +119,7 @@
 
             <img
               class="mx-auto d-block blog-img"
-              src="/Images/md-gif.gif"
+              src="/Nirooba_blog/Images/md-gif.gif"
               width="374"
               height="370"
               alt="mad-libs-gif"
@@ -159,7 +159,7 @@
             <h2 class="parah-spacing">Python code for Mad Libs with example</h2>
             <img
               class="mx-auto d-block blog-img"
-              src="/Images/MLcode.png"
+              src="/Nirooba_blog/Images/MLcode.png"
               alt="Mad libs code"
               width="750"
               height="700"
@@ -167,7 +167,7 @@
             <p>And as promised, here&apos;s an example 😂</p>
             <img
               class="mx-auto d-block blog-img"
-              src="/Images/MLcode2.png"
+              src="/Nirooba_blog/Images/MLcode2.png"
               alt="Mad libs code"
               width="800"
               height="400"
