--- a/blog-home.html
+++ b/blog-home.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!--bootstrap stylesheet-->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link href="index.css" rel="stylesheet" />
+
+    <!--local stylesheet blog.css-->
+
+    <link href="Blog.css" rel="stylesheet" />
+
+    <!--google font stylesheet-->
 
     <link
       rel="stylesheet"
@@ -71,11 +78,11 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="#">Mad Libs in Python</a>
-                </li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/mad-libs.html"
+                    >Mad Libs in Python</a
+                  >
                 </li>
               </ul>
             </li>
@@ -90,7 +97,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <img
-            src="/Images/blog-me-2.png"
+            src="/Nirooba_blog/Images/blog-me-2.png"
             class="rounded mx-auto d-block"
             alt="..."
             height="300px"
@@ -100,7 +107,11 @@
 
         <div class="col-md-4 col-sm-12 bg-dark">
           <div class="card border-dark left">
-            <img src="/Images/comments.jpg" class="card-img-top" alt="..." />
+            <img
+              src="/Nirooba_blog/Images/comments.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h2 class="card-text fs-4">Python Comments</h2>
               <a href="#" class="btn btn-danger">Read here!</a>
@@ -110,7 +121,11 @@
 
         <div class="col-md-4 col-sm-12 bg-dark">
           <div class="card border-dark right">
-            <img src="/Images/data_types.jpg" class="card-img-top" alt="..." />
+            <img
+              src="/Nirooba_blog/Images/data_types.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h2 class="card-text fs-4">Python Datatypes</h2>
               <a href="#" class="btn btn-danger">Read here!</a>
@@ -134,10 +149,14 @@
 
         <div class="col-md-4 col-sm-12 bg-dark grid-height">
           <div class="card border-dark left">
-            <img src="/Images/mad_libs.jpg" class="card-img-top" alt="..." />
+            <img
+              src="/Nirooba_blog/Images/mad_libs.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h2 class="card-text fs-4">Python Mad Libs</h2>
-              <a href="/pages/mad-libs.html" class="btn btn-danger"
+              <a href="/Nirooba_blog/pages/mad-libs.html" class="btn btn-danger"
                 >Read here!</a
               >
             </div>
@@ -146,7 +165,11 @@
 
         <div class="col-md-4 col-sm-12 bg-dark grid-height">
           <div class="card border-dark right">
-            <img src="/Images/install.jpg" class="card-img-top" alt="..." />
+            <img
+              src="/Nirooba_blog/Images/install.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h2 class="card-text fs-4">Install & setup Python!</h2>
               <a href="#" class="btn btn-danger">Read here!</a>
@@ -156,14 +179,14 @@
       </div>
     </div>
 
-    <!--Footer-->
+    <!--Footer
 
     <div class="container-fluid text-white bg-danger footnote">
       <i class="fa-brands fa-github"></i> &nbsp;
       <i class="fa-brands fa-linkedin"></i> &nbsp;
       <i class="fa-solid fa-user"></i> &nbsp;
       <i class="fa-solid fa-envelope"></i>
-    </div>
+    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
