--- a/blog-home.html
+++ b/blog-home.html
@@ -44,7 +44,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nirooba</a>
+        <a class="navbar-brand" href="/index.html">Nirooba</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,7 +59,9 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html"
+                >Home</a
+              >
             </li>
 
             <li class="nav-item dropdown">
@@ -91,15 +93,15 @@
       </div>
     </nav>
 
-    <!--Row1-->
-
     <div class="container-fluid">
+      <!--Row1-->
+
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <img
-            src="/Nirooba_blog/Images/blog-me-2.png"
+            src="/Nirooba_blog/Images/blog-home/my-picture.png"
             class="rounded mx-auto d-block"
-            alt="..."
+            alt="my-picture"
             height="300px"
             width="300px"
           />
@@ -108,9 +110,9 @@
         <div class="col-md-4 col-sm-12 bg-dark">
           <div class="card border-dark left">
             <img
-              src="/Nirooba_blog/Images/comments.jpg"
+              src="/Nirooba_blog/Images/blog-home/comments.jpg"
               class="card-img-top"
-              alt="..."
+              alt="comments thumbnail"
             />
             <div class="card-body">
               <h2 class="card-text fs-4">Python Comments</h2>
@@ -122,19 +124,23 @@
         <div class="col-md-4 col-sm-12 bg-dark">
           <div class="card border-dark right">
             <img
-              src="/Nirooba_blog/Images/data_types.jpg"
+              src="/Nirooba_blog/Images/blog-home/install.jpg"
               class="card-img-top"
-              alt="..."
+              alt="install thumbnail"
             />
             <div class="card-body">
-              <h2 class="card-text fs-4">Python Datatypes</h2>
-              <a href="#" class="btn btn-danger">Read here!</a>
+              <h2 class="card-text fs-4">Install & setup Python!</h2>
+              <a
+                href="/Nirooba_blog/pages/install-setup.html"
+                class="btn btn-danger"
+                >Read here!</a
+              >
             </div>
           </div>
         </div>
       </div>
 
-      <!--Row2-->
+      <!--Row 2-->
 
       <div class="row">
         <div class="col-md-4 col-sm-12 about">
@@ -147,12 +153,50 @@
           <a href="#" class="btn btn-danger">Click here</a>
         </div>
 
+        <div class="col-md-4 col-sm-12 bg-dark">
+          <div class="card border-dark left">
+            <img
+              src="/Nirooba_blog/Images/blog-home/pyvariable.png"
+              class="card-img-top"
+              alt="variables thumbnail"
+            />
+            <div class="card-body">
+              <h2 class="card-text fs-4">Python Variables</h2>
+              <a
+                href="/Nirooba_blog/pages/python-variables.html"
+                class="btn btn-danger"
+                >Read here!</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-12 bg-dark">
+          <div class="card border-dark right">
+            <img
+              src="/Nirooba_blog/Images/blog-home/pylists.png"
+              class="card-img-top"
+              alt="lists thumbnail"
+            />
+            <div class="card-body">
+              <h2 class="card-text fs-4">Python lists</h2>
+              <a href="#" class="btn btn-danger">Read here!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Row3-->
+
+      <div class="row">
+        <div class="col-md-4 col-sm-12 about"></div>
+
         <div class="col-md-4 col-sm-12 bg-dark grid-height">
           <div class="card border-dark left">
             <img
-              src="/Nirooba_blog/Images/mad_libs.jpg"
+              src="/Nirooba_blog/Images/blog-home/mad_libs.jpg"
               class="card-img-top"
-              alt="..."
+              alt="madlibs thumbnail"
             />
             <div class="card-body">
               <h2 class="card-text fs-4">Python Mad Libs</h2>
@@ -166,12 +210,12 @@
         <div class="col-md-4 col-sm-12 bg-dark grid-height">
           <div class="card border-dark right">
             <img
-              src="/Nirooba_blog/Images/install.jpg"
+              src="/Nirooba_blog/Images/blog-home/data_types.jpg"
               class="card-img-top"
-              alt="..."
+              alt="datatypes thumbnail"
             />
             <div class="card-body">
-              <h2 class="card-text fs-4">Install & setup Python!</h2>
+              <h2 class="card-text fs-4">Python Datatypes</h2>
               <a href="#" class="btn btn-danger">Read here!</a>
             </div>
           </div>
@@ -186,6 +230,10 @@
       <i class="fa-brands fa-linkedin"></i> &nbsp;
       <i class="fa-solid fa-user"></i> &nbsp;
       <i class="fa-solid fa-envelope"></i>
+
+
+
+
     </div> -->
 
     <script
