--- a/pages/mad-libs.html
+++ b/pages/mad-libs.html
@@ -4,13 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!--bootstrap-->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <!--Blog.css-->
+
     <link href="/Nirooba_blog/Blog.css" rel="stylesheet" />
+
+    <!--font awesome-->
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -19,19 +27,32 @@
       referrerpolicy="no-referrer"
     />
 
+    <!--google fonts-->
+
+    <!--Lora font-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@300&family=Comfortaa&family=Lora&family=Red+Hat+Display:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+
+    <!--Gloock font-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@300&family=Comfortaa&family=Gloock&family=Lora&family=Red+Hat+Display:wght@300;400&display=swap"
       rel="stylesheet"
     />
 
     <title>Nirooba Blog</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nirooba</a>
+        <a class="navbar-brand" href="/index.html">Nirooba</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,7 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/Nirooba_blog/blog-home.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -63,10 +84,31 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="#">Home</a></li>
-                <li><a class="dropdown-item" href="#">Mad Libs</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="/Nirooba_blog/blog-home.html"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/mad-libs.html"
+                    >Mad Libs</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/python-variables.html"
+                    >Python Variables</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/install-setup.html"
+                    >Python Install & Setup</a
+                  >
                 </li>
               </ul>
             </li>
@@ -83,8 +125,8 @@
         <div class="col-10 cover-bg">
           <img
             class="mx-auto d-block img-fluid cover-bg"
-            src="/Nirooba_blog/Images/m.png"
-            alt="md-cover"
+            src="/Nirooba_blog/Images/madlibs/madlibs-cover.png"
+            alt="madlibs-cover"
           />
         </div>
         <div class="col-1"></div>
@@ -119,7 +161,7 @@
 
             <img
               class="mx-auto d-block blog-img"
-              src="/Nirooba_blog/Images/md-gif.gif"
+              src="/Nirooba_blog/Images/madlibs/madlibs-gif.gif"
               width="374"
               height="370"
               alt="mad-libs-gif"
@@ -159,16 +201,16 @@
             <h2 class="parah-spacing">Python code for Mad Libs with example</h2>
             <img
               class="mx-auto d-block blog-img"
-              src="/Nirooba_blog/Images/MLcode.png"
-              alt="Mad libs code"
+              src="/Nirooba_blog/Images/madlibs/madlibs-eg1(a).png"
+              alt="Mad libs code 1a"
               width="750"
               height="700"
             />
             <p>And as promised, here&apos;s an example 😂</p>
             <img
               class="mx-auto d-block blog-img"
-              src="/Nirooba_blog/Images/MLcode2.png"
-              alt="Mad libs code"
+              src="/Nirooba_blog/Images/madlibs/madlibs-eg1(b).png"
+              alt="Mad libs code 1b"
               width="800"
               height="400"
             />
