new blog change

--- a/blog-home.html
+++ b/blog-home.html
@@ -150,7 +150,11 @@
           <h3>Welcome to my blogging website!</h3>
           <h5>Check out my Python Blog!</h5>
           <br />
-          <a href="#" class="btn btn-danger">Click here</a>
+          <a
+            href="/Nirooba_blog/pages/install-setup.html"
+            class="btn btn-danger"
+            >Click here</a
+          >
         </div>
 
         <div class="col-md-4 col-sm-12 bg-dark">
