fixed some changes

--- a/blog-home.html
+++ b/blog-home.html
@@ -80,11 +80,34 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
+                  <a class="dropdown-item" href="#">Python Comments</a>
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/install-setup.html"
+                    >Install Python!</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/Nirooba_blog/pages/python-variables.html"
+                    >Python Variables</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Python lists</a>
+                </li>
+                <li>
                   <a
                     class="dropdown-item"
                     href="/Nirooba_blog/pages/mad-libs.html"
-                    >Mad Libs in Python</a
+                    >Python MadLibs</a
                   >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Python Datatypes</a>
                 </li>
               </ul>
             </li>
@@ -105,6 +128,14 @@
             height="300px"
             width="300px"
           />
+          <div class="about">
+            <h5>Hi Everyone! I'm</h5>
+            <h2>Pon Nirooba Vanaraja.</h2>
+            <h5>A canada based software developer</h5>
+            <h3>Welcome to my blogging website!</h3>
+            <h5>Check out my Python Blog!</h5>
+            <br />
+          </div>
         </div>
 
         <div class="col-md-4 col-sm-12 bg-dark">
@@ -129,7 +160,7 @@
               alt="install thumbnail"
             />
             <div class="card-body">
-              <h2 class="card-text fs-4">Install & setup Python!</h2>
+              <h2 class="card-text fs-4">Install Python!</h2>
               <a
                 href="/Nirooba_blog/pages/install-setup.html"
                 class="btn btn-danger"
@@ -143,19 +174,7 @@
       <!--Row 2-->
 
       <div class="row">
-        <div class="col-md-4 col-sm-12 about">
-          <h5>Hi Everyone! I'm</h5>
-          <h2>Pon Nirooba Vanaraja.</h2>
-          <h5>A canada based software developer</h5>
-          <h3>Welcome to my blogging website!</h3>
-          <h5>Check out my Python Blog!</h5>
-          <br />
-          <a
-            href="/Nirooba_blog/pages/install-setup.html"
-            class="btn btn-danger"
-            >Click here</a
-          >
-        </div>
+        <div class="col-md-4 col-sm-12"></div>
 
         <div class="col-md-4 col-sm-12 bg-dark">
           <div class="card border-dark left">
