--- a/pages/install-setup.html
+++ b/pages/install-setup.html
@@ -123,9 +123,11 @@
 
     <div class="container grid-heigh page">
       <div class="row">
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
 
-        <div class="col-10 bg-secondary p-2 text-dark bg-opacity-10">
+        <div
+          class="col-md-10 col-sm-12 bg-secondary p-2 text-dark bg-opacity-10"
+        >
           <div class="text-area">
             <!-- content-->
 
@@ -176,11 +178,9 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/PythonDownload.png"
               alt="Download page"
-              height="500px"
-              width="750px"
             />
             <br />
 
@@ -203,11 +203,9 @@
             </ol>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/pyinstall-eg1.png"
               alt="terminal example"
-              height="50px"
-              width="300px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -216,7 +214,7 @@
             <br />
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/pyterminal1.png"
               alt="terminal 1(a)"
               height="150px"
@@ -224,7 +222,7 @@
             />
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/pyterminal2.png"
               alt="terminal 1(b)"
               height="150px"
@@ -254,7 +252,7 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/PyCharm-1(a).png"
               alt="pycharm dowload page"
               height="500px"
@@ -262,7 +260,7 @@
             />
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/install/PyCharm-1(b).png"
               alt="pycharm dowload page"
               height="500px"
@@ -277,7 +275,7 @@
           </div>
         </div>
 
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
       </div>
     </div>
 
