--- a/pages/python-variables.html
+++ b/pages/python-variables.html
@@ -123,9 +123,11 @@
 
     <div class="container grid-heigh page">
       <div class="row">
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
 
-        <div class="col-10 bg-secondary p-2 text-dark bg-opacity-10">
+        <div
+          class="col-md-10 col-sm-12 bg-secondary p-2 text-dark bg-opacity-10"
+        >
           <div class="text-area">
             <!-- content-->
 
@@ -136,11 +138,9 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-1.png"
               alt="variable example 1"
-              height="50px"
-              width="200px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -155,11 +155,9 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-2.png"
               alt="variable example 2"
-              height="125px"
-              width="350px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -179,11 +177,9 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-3.png"
               alt="variable example 3"
-              height="100px"
-              width="700px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -194,31 +190,25 @@
             <h4 class="parah-spacing fw-bold">PascalCase</h4>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-4.png"
               alt="variable example 4"
-              height="50px"
-              width="200px"
             />
 
             <h4 class="parah-spacing fw-bold">camelCase</h4>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-5.png"
               alt="variable example 5"
-              height="45px"
-              width="200px"
             />
 
             <h4 class="parah-spacing fw-bold">Snake_case</h4>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-6.png"
               alt="variable example 6"
-              height="45px"
-              width="200px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -226,11 +216,9 @@
             </p>
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-7.png"
               alt="variable example 7"
-              height="110px"
-              width="200px"
             />
 
             <p class="text-spacing fs-5 parah-spacing">
@@ -256,15 +244,13 @@
             <!-- Examples 1 and 2-->
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-8.png"
               alt="variable example 8"
-              height="200px"
-              width="1000px"
             />
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-9.png"
               alt="variable example 9"
               height="62.5px"
@@ -278,7 +264,7 @@
             <br />
 
             <img
-              class="mx-auto d-block parah-spacing"
+              class="img-fluid mx-auto d-block parah-spacing"
               src="/Nirooba_blog/Images/variables/illustration-10.png"
               alt="variable example 10"
               height="150px"
@@ -287,7 +273,7 @@
           </div>
         </div>
 
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
       </div>
     </div>
 
