--- a/pages/mad-libs.html
+++ b/pages/mad-libs.html
@@ -121,15 +121,15 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10 cover-bg">
+        <div class="col-md-1 col-sm-0"></div>
+        <div class="col-md-10 col-sm-12 cover-bg">
           <img
             class="mx-auto d-block img-fluid cover-bg"
             src="/Nirooba_blog/Images/madlibs/madlibs-cover.png"
             alt="madlibs-cover"
           />
         </div>
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
       </div>
     </div>
 
@@ -137,9 +137,11 @@
 
     <div class="container grid-height">
       <div class="row">
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
 
-        <div class="col-10 bg-secondary p-2 text-dark bg-opacity-10">
+        <div
+          class="col-md-10 col-sm-12 bg-secondary p-2 text-dark bg-opacity-10"
+        >
           <div class="text-area">
             <!-- content-->
 
@@ -160,7 +162,7 @@
             <!-- GIF -->
 
             <img
-              class="mx-auto d-block blog-img"
+              class="img-fluid mx-auto d-block blog-img"
               src="/Nirooba_blog/Images/madlibs/madlibs-gif.gif"
               width="374"
               height="370"
@@ -200,7 +202,7 @@
 
             <h2 class="parah-spacing">Python code for Mad Libs with example</h2>
             <img
-              class="mx-auto d-block blog-img"
+              class="img-fluid mx-auto d-block blog-img"
               src="/Nirooba_blog/Images/madlibs/madlibs-eg1(a).png"
               alt="Mad libs code 1a"
               width="750"
@@ -208,7 +210,7 @@
             />
             <p>And as promised, here&apos;s an example 😂</p>
             <img
-              class="mx-auto d-block blog-img"
+              class="img-fluid mx-auto d-block blog-img"
               src="/Nirooba_blog/Images/madlibs/madlibs-eg1(b).png"
               alt="Mad libs code 1b"
               width="800"
@@ -221,7 +223,7 @@
           </div>
         </div>
 
-        <div class="col-1"></div>
+        <div class="col-md-1 col-sm-0"></div>
       </div>
     </div>
 
