--- a/blog-home.html
+++ b/blog-home.html
@@ -123,10 +123,8 @@
         <div class="col-md-4 col-sm-12">
           <img
             src="/Nirooba_blog/Images/blog-home/my-picture.png"
-            class="rounded mx-auto d-block"
+            class="img-fluid rounded mx-auto d-block d-md-none d-lg-block"
             alt="my-picture"
-            height="300px"
-            width="300px"
           />
           <div class="about">
             <h5>Hi Everyone! I'm</h5>
